Enhance SMPService error handling to capture and log HTTP error response bodies